[gd_scene load_steps=2 format=3 uid="uid://c0k3o7e0j46qc"]

[ext_resource type="Script" uid="uid://c8pwa1v0gmxif" path="res://Selection/game_selection.gd" id="1_bvbfy"]

[node name="Game Selection" type="Label"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -174.0
offset_right = 102.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
text = "Select Your Game... Or not"
script = ExtResource("1_bvbfy")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = 132.0
offset_right = 272.0
offset_bottom = 242.0
columns = 3

[node name="Button1" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Maze"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Platformer"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dodge"

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "game 4"

[node name="Button5" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "game 5"

[node name="Button6" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "game 6"
